tests/script/negative/duplicates/fields.s
type T1 = C(int f, int f);     // not ok
type T2 = D(int g) | E(int g); // ok
